Refactored ownership check from Authentication