@@ -33,6 +33,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 // TODO: test CRUD operations
 public class AsyncTaskServiceTests extends ESSingleNodeTestCase {
@@ -84,79 +85,112 @@ public class AsyncTaskServiceTests extends ESSingleNodeTestCase {
         }
     }
 
+    private Map<String, String> getAuthenticationAsHeaders(Authentication authentication) throws IOException {
+        ThreadContext threadContext = new ThreadContext(Settings.EMPTY);
+        authentication.writeToContext(threadContext);
+        return threadContext.getHeaders();
+    }
+
     public void testEnsuredAuthenticatedUserIsSame() throws IOException {
         Authentication original = new Authentication(new User("test", "role"), new Authentication.RealmRef("realm", "file", "node"), null);
         Authentication current = randomBoolean()
             ? original
             : new Authentication(new User("test", "role"), new Authentication.RealmRef("realm", "file", "node"), null);
-        assertTrue(original.canAccessResourcesOf(current));
-        ThreadContext threadContext = new ThreadContext(Settings.EMPTY);
-        original.writeToContext(threadContext);
-        assertTrue(indexService.ensureAuthenticatedUserIsSame(threadContext.getHeaders(), current));
+        current.writeToContext(indexService.getSecurityContext().getThreadContext());
 
-        // original is not set
-        assertTrue(indexService.ensureAuthenticatedUserIsSame(Collections.emptyMap(), current));
-        // current is not set
-        assertFalse(indexService.ensureAuthenticatedUserIsSame(threadContext.getHeaders(), null));
+        assertTrue(indexService.getSecurityContext().canIAccessResourcesCreatedBy(getAuthenticationAsHeaders(original)));
+
+        // original is not authenticated
+        assertTrue(indexService.getSecurityContext().canIAccessResourcesCreatedBy(Map.of()));
+        // current is not authenticated
+        try (ThreadContext.StoredContext ignore = indexService.getSecurityContext().getThreadContext().stashContext()) {
+            assertFalse(indexService.getSecurityContext().canIAccessResourcesCreatedBy(getAuthenticationAsHeaders(original)));
+            assertTrue(indexService.getSecurityContext().canIAccessResourcesCreatedBy(Map.of()));
+        }
 
         // original user being run as
         User user = new User(new User("test", "role"), new User("authenticated", "runas"));
-        current = new Authentication(
-            user,
-            new Authentication.RealmRef("realm", "file", "node"),
-            new Authentication.RealmRef(randomAlphaOfLengthBetween(1, 16), "file", "node")
+        assertTrue(
+            indexService.getSecurityContext()
+                .canIAccessResourcesCreatedBy(
+                    getAuthenticationAsHeaders(
+                        new Authentication(
+                            user,
+                            new Authentication.RealmRef(randomAlphaOfLengthBetween(1, 16), "file", "node"),
+                            new Authentication.RealmRef("realm", "file", "node")
+                        )
+                    )
+                )
         );
-        assertTrue(original.canAccessResourcesOf(current));
-        assertTrue(indexService.ensureAuthenticatedUserIsSame(threadContext.getHeaders(), current));
 
-        // both user are run as
-        current = new Authentication(
-            user,
-            new Authentication.RealmRef("realm", "file", "node"),
-            new Authentication.RealmRef(randomAlphaOfLengthBetween(1, 16), "file", "node")
-        );
-        Authentication runAs = current;
-        assertTrue(runAs.canAccessResourcesOf(current));
-        threadContext = new ThreadContext(Settings.EMPTY);
-        original.writeToContext(threadContext);
-        assertTrue(indexService.ensureAuthenticatedUserIsSame(threadContext.getHeaders(), current));
+        try (ThreadContext.StoredContext ignore = indexService.getSecurityContext().getThreadContext().stashContext()) {
+            // current user being run as
+            current = new Authentication(
+                user,
+                new Authentication.RealmRef(randomAlphaOfLengthBetween(1, 16), "file", "node"),
+                new Authentication.RealmRef("realm", "file", "node")
+            );
+            current.writeToContext(indexService.getSecurityContext().getThreadContext());
+            assertTrue(indexService.getSecurityContext().canIAccessResourcesCreatedBy(getAuthenticationAsHeaders(original)));
 
-        // different authenticated by type
-        Authentication differentRealmType = new Authentication(
-            new User("test", "role"),
-            new Authentication.RealmRef("realm", randomAlphaOfLength(5), "node"),
-            null
-        );
-        threadContext = new ThreadContext(Settings.EMPTY);
-        original.writeToContext(threadContext);
-        assertFalse(original.canAccessResourcesOf(differentRealmType));
-        assertFalse(indexService.ensureAuthenticatedUserIsSame(threadContext.getHeaders(), differentRealmType));
+            // both users are run as
+            assertTrue(
+                indexService.getSecurityContext()
+                    .canIAccessResourcesCreatedBy(
+                        getAuthenticationAsHeaders(
+                            new Authentication(
+                                user,
+                                new Authentication.RealmRef(randomAlphaOfLengthBetween(1, 16), "file", "node"),
+                                new Authentication.RealmRef("realm", "file", "node")
+                            )
+                        )
+                    )
+            );
+        }
 
-        // wrong user
-        Authentication differentUser = new Authentication(
-            new User("test2", "role"),
-            new Authentication.RealmRef("realm", "realm", "node"),
-            null
-        );
-        assertFalse(original.canAccessResourcesOf(differentUser));
+        try (ThreadContext.StoredContext ignore = indexService.getSecurityContext().getThreadContext().stashContext()) {
+            // different authenticated by type
+            Authentication differentRealmType = new Authentication(
+                new User("test", "role"),
+                new Authentication.RealmRef("realm", randomAlphaOfLength(10), "node"),
+                null
+            );
+            differentRealmType.writeToContext(indexService.getSecurityContext().getThreadContext());
+            assertFalse(indexService.getSecurityContext().canIAccessResourcesCreatedBy(getAuthenticationAsHeaders(original)));
+        }
+
+        // different user
+        try (ThreadContext.StoredContext ignore = indexService.getSecurityContext().getThreadContext().stashContext()) {
+            Authentication differentUser = new Authentication(
+                new User("test2", "role"),
+                new Authentication.RealmRef("realm", "realm", "node"),
+                null
+            );
+            differentUser.writeToContext(indexService.getSecurityContext().getThreadContext());
+            assertFalse(indexService.getSecurityContext().canIAccessResourcesCreatedBy(getAuthenticationAsHeaders(original)));
+        }
 
         // run as different user
-        Authentication diffRunAs = new Authentication(
-            new User(new User("test2", "role"), new User("authenticated", "runas")),
-            new Authentication.RealmRef("realm", "file", "node1"),
-            new Authentication.RealmRef("realm", "file", "node1")
-        );
-        assertFalse(original.canAccessResourcesOf(diffRunAs));
-        assertFalse(indexService.ensureAuthenticatedUserIsSame(threadContext.getHeaders(), diffRunAs));
+        try (ThreadContext.StoredContext ignore = indexService.getSecurityContext().getThreadContext().stashContext()) {
+            Authentication differentRunAs = new Authentication(
+                new User(new User("test2", "role"), new User("authenticated", "runas")),
+                new Authentication.RealmRef("realm_runas", "file", "node1"),
+                new Authentication.RealmRef("realm", "file", "node1")
+            );
+            differentRunAs.writeToContext(indexService.getSecurityContext().getThreadContext());
+            assertFalse(indexService.getSecurityContext().canIAccessResourcesCreatedBy(getAuthenticationAsHeaders(original)));
+        }
 
         // run as different looked up by type
-        Authentication runAsDiffType = new Authentication(
-            user,
-            new Authentication.RealmRef("realm", "file", "node"),
-            new Authentication.RealmRef(randomAlphaOfLengthBetween(1, 16), randomAlphaOfLengthBetween(5, 12), "node")
-        );
-        assertFalse(original.canAccessResourcesOf(runAsDiffType));
-        assertFalse(indexService.ensureAuthenticatedUserIsSame(threadContext.getHeaders(), runAsDiffType));
+        try (ThreadContext.StoredContext ignore = indexService.getSecurityContext().getThreadContext().stashContext()) {
+            Authentication runAsDiffType = new Authentication(
+                user,
+                new Authentication.RealmRef("realm", "file", "node"),
+                new Authentication.RealmRef(randomAlphaOfLengthBetween(1, 16), randomAlphaOfLengthBetween(5, 12), "node")
+            );
+            runAsDiffType.writeToContext(indexService.getSecurityContext().getThreadContext());
+            assertFalse(indexService.getSecurityContext().canIAccessResourcesCreatedBy(getAuthenticationAsHeaders(original)));
+        }
     }
 
     public void testAutoCreateIndex() throws Exception {
